Added boss teleportation.
- Added the ability to make a boss teleport during a action.
- Added teleporting to the first boss.

--- a/ComicSans/Assembly-CSharp.csproj
+++ b/ComicSans/Assembly-CSharp.csproj
@@ -58,6 +58,7 @@
      <Compile Include="Assets\Scripts\Boss\Actions\BossAttackMove.cs" />
      <Compile Include="Assets\Scripts\Boss\Actions\BossIdle.cs" />
      <Compile Include="Assets\Scripts\Boss\Actions\BossMovement.cs" />
+     <Compile Include="Assets\Scripts\Boss\Actions\BossTeleport.cs" />
      <Compile Include="Assets\Scripts\Boss\BossPattern.cs" />
      <Compile Include="Assets\Scripts\Boss\BossPhase.cs" />
      <Compile Include="Assets\Scripts\Boss\BossScript.cs" />
