--- a/ComicSans/Assembly-CSharp.csproj
+++ b/ComicSans/Assembly-CSharp.csproj
@@ -62,6 +62,15 @@
      <Compile Include="Assets\Scripts\Boss\BossPattern.cs" />
      <Compile Include="Assets\Scripts\Boss\BossPhase.cs" />
      <Compile Include="Assets\Scripts\Boss\BossScript.cs" />
+     <Compile Include="Assets\Scripts\Bullet_Player_Basic.cs" />
+     <Compile Include="Assets\Scripts\Full_Health.cs" />
+     <Compile Include="Assets\Scripts\Low_Health.cs" />
+     <Compile Include="Assets\Scripts\Mid_Health.cs" />
+     <Compile Include="Assets\Scripts\Player_Health.cs" />
+     <Compile Include="Assets\Scripts\Player_Manager.cs" />
+     <Compile Include="Assets\Scripts\Player_Moviment.cs" />
+     <Compile Include="Assets\Scripts\Player_Shot.cs" />
+     <Compile Include="Assets\Scripts\Wall.cs" />
  <Reference Include="UnityEditor.StandardEvents">
  <HintPath>D:/Users/luise/Documents/USP/FoG/comic-sans/ComicSans/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
  </Reference>
