--- a/ComicSans/Assembly-CSharp.csproj
+++ b/ComicSans/Assembly-CSharp.csproj
@@ -68,7 +68,7 @@
      <Compile Include="Assets\Scripts\Mid_Health.cs" />
      <Compile Include="Assets\Scripts\Player_Health.cs" />
      <Compile Include="Assets\Scripts\Player_Manager.cs" />
-     <Compile Include="Assets\Scripts\Player_Moviment.cs" />
+     <Compile Include="Assets\Scripts\Player_Movement.cs" />
      <Compile Include="Assets\Scripts\Player_Shot.cs" />
      <Compile Include="Assets\Scripts\Wall.cs" />
  <Reference Include="UnityEditor.StandardEvents">
