--- a/ComicSans/Assembly-CSharp.csproj
+++ b/ComicSans/Assembly-CSharp.csproj
@@ -65,11 +65,13 @@
      <Compile Include="Assets\Scripts\Boss\Projectile\BossAppearProjectile.cs" />
      <Compile Include="Assets\Scripts\Boss\Projectile\BossFollowProjectile.cs" />
      <Compile Include="Assets\Scripts\Boss\Projectile\BossProjectileSpawner.cs" />
+     <Compile Include="Assets\Scripts\ObjectPool.cs" />
      <Compile Include="Assets\Scripts\Player\Player_Health.cs" />
      <Compile Include="Assets\Scripts\Player\Player_Manager.cs" />
      <Compile Include="Assets\Scripts\Player\Player_Movement.cs" />
      <Compile Include="Assets\Scripts\Player\Player_Shot.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerProjectile.cs" />
+     <Compile Include="Assets\Scripts\PooledObject.cs" />
      <Compile Include="Assets\Scripts\ProjectileBase.cs" />
  <Reference Include="UnityEditor.StandardEvents">
  <HintPath>D:/Users/luise/Documents/comic-sans/ComicSans/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
