Pausing and death screen.
- Renamed GameManager to GameController.
- Added pause menu.
- Added death screen (WIP).
- Made the Boss be spawned by the SceneSettings in order to restart the game without reloading the scene (WIP).
- Modified GameController and Pooling System to allow pausing and quitting to main menu.

--- a/ComicSans/Assembly-CSharp.csproj
+++ b/ComicSans/Assembly-CSharp.csproj
@@ -73,7 +73,7 @@
      <Compile Include="Assets\Scripts\Boss\Projectile\BossProjectileSpawner.cs" />
      <Compile Include="Assets\Scripts\Boss\Projectile\BossRepulsorAttack.cs" />
      <Compile Include="Assets\Scripts\Boss\Projectile\PunkWallAttack.cs" />
-     <Compile Include="Assets\Scripts\Misc\GameManager.cs" />
+     <Compile Include="Assets\Scripts\Misc\GameController.cs" />
      <Compile Include="Assets\Scripts\Misc\SceneSettings.cs" />
      <Compile Include="Assets\Scripts\Player\Player.cs" />
      <Compile Include="Assets\Scripts\Polling\ObjectPool.cs" />
