- Moved playerSpawn and positionConstraints to SceneSettings. - Now reseting the player velocity when hit by the Boss. - Renamed Input Manager to Input Controller. - Grouped Controller scripts into a menu item. - Added indications to where the spike walls will appear during Punk scream.

--- a/ComicSans/Assembly-CSharp.csproj
+++ b/ComicSans/Assembly-CSharp.csproj
@@ -75,7 +75,7 @@
      <Compile Include="Assets\Scripts\Boss\Projectile\BossRepulsorAttack.cs" />
      <Compile Include="Assets\Scripts\Boss\Projectile\PunkWallAttack.cs" />
      <Compile Include="Assets\Scripts\Misc\GameController.cs" />
-     <Compile Include="Assets\Scripts\Misc\InputManager.cs" />
+     <Compile Include="Assets\Scripts\Misc\InputController.cs" />
      <Compile Include="Assets\Scripts\Misc\SceneSettings.cs" />
      <Compile Include="Assets\Scripts\Player\Player.cs" />
      <Compile Include="Assets\Scripts\Polling\ObjectPool.cs" />
